@startuml
!define RECTANGLE class

class Person {
    - Long id
    - String firstName
    - String lastName
    - LocalDate birthday
    - String email
    - Enum gender
    - LocalDateTime updated
}

class Hobby {
    - Long id
    - String name
    - String wikiLink
    - String category
    - String type
}

class Address {
    - Long id
    - String address
    - LocalDateTime updated
}

class PhoneNumber {
    - Long id
    - int phoneNumber
    - LocalDateTime updated
}

class Password {
    - Long id
    - String password
    - LocalDateTime updated
}

class ZipCode {
    - int zip
    - String cityName
    - String regionName
    - String municipalityName
}

Person "1" -- "1" Password : has >
Person "1" -- "0..*" PhoneNumber : has >
Person "1" -- "1" Address : lives at >
Address "1" -- "0..*" Person : includes >
Person "0..*" -- "0..*" Hobby : enjoys >
Address "1" -- "1" ZipCode : located in >

@enduml
